added hive support to persist storage in metastore to simulate delta